force-app/main/default/objects/Assessment_Filter_Config__mdt/Assessment_Filter_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for assessment filtering by Objects and filter criteria</description>
    <label>Assessment Filter Config</label>
    <pluralLabel>Assessment Filter Configs</pluralLabel>
</CustomObject>