force-app/main/default/objects/Assessment_Filter_Config__mdt/fields/Assessment_Filter_Field_API__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Filter_Field_API__c</fullName>
    <description>Optional: Field API name on Assessment object containing filter values to match against source record (defaults to first filter field if not specified)</description>
    <label>Assessment Filter Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>