force-app/main/default/objects/Assessment_Filter_Config__mdt/fields/Assessment_Objects_Field_API__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Objects_Field_API__c</fullName>
    <description>Optional: Field API name on Assessment object listing applicable object types (defaults to Objects__c if not specified)</description>
    <label>Assessment Objects Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>