force-app/main/default/objects/Assessment_Filter_Config__mdt/fields/Assessment_Objects_Field_API_Subscriber__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Objects_Field_API_Subscriber__c</fullName>
    <description>Optional: Field API name on Assessment object listing applicable object types (defaults to Objects__c if not specified). Subscriber editable field.</description>
    <label>Objects Field API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>