force-app/main/default/objects/Assessment_Filter_Config__mdt/fields/Is_Active_Subscriber__c.field-meta.xml
<CustomField>
    <fullName>Is_Active_Subscriber__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable/disable assessment filtering. Subscriber editable field.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>